Add new TIntegerRange adv record to structs category
A new source code file was added for TIntegerRange.

Meta data for TIntegerRange was added to structs.ini.

--- a/collection/structs.ini
+++ b/collection/structs.ini
@@ -57,7 +57,7 @@ FPC=Y
 DescEx="<p>Constructs and returns a <var>TRange</var> record with bounds <var>A</var> and <var>B</var>.</p><p>The smaller of <var>A</var> and <var>B</var> is used as the lower bound and the larger as the upper bound. If both values are equal then the range will be empty.</p>"
 Depends=TRange
 SeeAlso=TRange
-SeeAlso=TRange,TRangeEx
+SeeAlso=TRange,TRangeEx,TIntegerRange
 Snip=580.dat
 Delphi7=Y
 Delphi2005Win32=Y
@@ -122,6 +122,20 @@ Delphi10S=Y
 Delphi12A=Y
 FPC=Y
 
+[TIntegerRange]
+DisplayName=TIntegerRange
+DescEx="<p>An advanced record that encapsulates an integer range along with operations on it.</p><p>The range is immutable, so the constructor must be used to instantiate a non-empty range.</p>"
+Extra="<p><var>TIntegerRange</var> supports various operator overloads, which operate in a way similar to the Pascal <strong>set</strong> operators:</p><p><mono>=</mono> compares two ranges for equality.</p><p><mono>&lt;&gt;</mono> compares two ranges for inequality.</p><p><mono>&lt;=</mono> checks if the left operand is wholly contained in, or is equal to the right operand (c.f. Pascal subset operator).</p><p><mono>&gt;=</mono> checks if the left operand wholly contains, or is equal to, the right hand operand (c.f. Pascal proper superset operator).</p><p><mono>+</mono> creates the union of the two ranges specified by the operands, i.e. a new range that is the smallest range that contains both operands. For example, representing a range as <mono>[A..B]</mono>, <mono>[1..3] + [7..10] = [1..10]</mono> (c.f. Pascal union operator).</p><p><mono>*</mono> creates a new range that the largest range contained in both ranges specified by the operands, or an empty range if the operands do not overlap. For example, <mono>[1..3] * [2..7] = [2..3]</mono> while <mono>[1..3] * [6..9] is an empty range.</mono> (c.f. Pascal intersection operator).</p><p><strong><mono>in</mono></strong> checks if the integer specified in the left hand operand is contained in the range specified by the right hand operand (c.f. Pascal membership operator).</p>"
+Kind=class
+Units=SysUtils,Math
+SeeAlso=TRange,TRangeEx
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Structs"
+Snip=706.dat
+DelphiXE=Y
+Delphi12A=Y
+
 [TPointF]
 Kind=type
 DescEx="<p>Encapsulates a point with double precision floating point coordinates.</p>"
@@ -150,7 +164,7 @@ FPC=Y
 Kind=type
 DescEx="<p>Encapsulates the upper and lower bounds of a range of values.</p>"
 SeeAlso=Range
-SeeAlso=Range,TRangeEx
+SeeAlso=Range,TRangeEx,TIntegerRange
 Snip=579.dat
 Delphi7=Y
 Delphi2005Win32=Y
@@ -195,7 +209,7 @@ FPC=Y
 Kind=class
 DescEx="<p>Encapsulates a range of integers with a methods to test whether a value falls within the range and to adjust the value to fit.</p>"
 Units=Math
-SeeAlso=Range,TRange
+SeeAlso=Range,TRange,TIntegerRange
 Snip=578.dat
 Delphi2=N
 Delphi3=N
