Update structs.ini with advanced testing info
All but one snippets in structs.ini had the same advanced testing
information added to it that sets TestInfo=advanced,
AdvancedTest.Level=unit-tests and AdvancedTest.URL to the Cat-Structs
unit tests on Github.

The only snippet not so updated was TIntegerRange, which already has the
same test info.

--- a/collection/structs.ini
+++ b/collection/structs.ini
@@ -9,6 +9,9 @@
 DescEx="<p>Constructs and returns a <var>TRectF</var> record with the given top-left coordinate, width and height.</p>"
 SeeAlso=RectF,TRectF
 Depends=TRectF
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Structs"
 Snip=493.dat
 Delphi2=Y
 Delphi3=Y
@@ -31,6 +34,9 @@ FPC=Y
 
 [PointF]
 DescEx="<p>Constructs and returns a <var>TPointF</var> record with the given x &amp; y coordinates.</p>"
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Structs"
 SeeAlso=TPointF,RectF
 Depends=TPointF
 Snip=491.dat
@@ -58,6 +64,9 @@ DescEx="<p>Constructs and returns a <var>TRange</var> record with bounds <var>A<
 Depends=TRange
 SeeAlso=TRange
 SeeAlso=TRange,TRangeEx,TIntegerRange
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Structs"
 Snip=580.dat
 Delphi7=Y
 Delphi2005Win32=Y
@@ -77,6 +86,9 @@ FPC=Y
 DescEx="<p>Constructs and returns a <var>TRectF</var> record with the given left, top, right &amp; bottom coordinates.</p>"
 SeeAlso=BoundsF,PointF,TRectF
 Depends=TRectF
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Structs"
 Snip=492.dat
 Delphi2=Y
 Delphi3=Y
@@ -102,6 +114,9 @@ DescEx="<p>Constructs and returns a <var>TSize</var> record with the given dimen
 Extra="<p>This routine complements the <var>Rect</var> and <var>Point</var> routines defined in the Delphi RTL.</p><p>For versions of Delphi before Delphi 6 replace the <var>Types</var> unit with <var>Windows</var> to get the routine to compile.</p>"
 Units=Types
 SeeAlso=TSizeEx
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Structs"
 Snip=488.dat
 Delphi2=N
 Delphi3=N
@@ -140,6 +155,9 @@ Delphi12A=Y
 Kind=type
 DescEx="<p>Encapsulates a point with double precision floating point coordinates.</p>"
 SeeAlso=PointF,TRectF
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Structs"
 Snip=489.dat
 Delphi2=Y
 Delphi3=Y
@@ -165,6 +183,9 @@ Kind=type
 DescEx="<p>Encapsulates the upper and lower bounds of a range of values.</p>"
 SeeAlso=Range
 SeeAlso=Range,TRangeEx,TIntegerRange
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Structs"
 Snip=579.dat
 Delphi7=Y
 Delphi2005Win32=Y
@@ -185,6 +206,9 @@ Kind=type
 DescEx="<p>Encapsulates a rectangle with double precision floating point size and position.</p>"
 SeeAlso=RectF,BoundsF,TPointF
 Depends=TPointF
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Structs"
 Snip=490.dat
 Delphi2=Y
 Delphi3=Y
@@ -210,6 +234,9 @@ Kind=class
 DescEx="<p>Encapsulates a range of integers with a methods to test whether a value falls within the range and to adjust the value to fit.</p>"
 Units=Math
 SeeAlso=Range,TRange,TIntegerRange
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Structs"
 Snip=578.dat
 Delphi2=N
 Delphi3=N
@@ -235,6 +262,9 @@ Kind=class
 DescEx="<p>Record that represents the size, i.e. the width and height, of something.</p><p>This is an extended version of the <var>TSize</var> record that features equality and inequality operator overloading, a test for zero size and a constructor.</p><p><var>TSizeEx</var> is assignment compatible and comparible with the Delphi RTL's <var>TSize</var> record.</p>"
 Units=Types
 SeeAlso=Size
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Structs"
 Snip=510.dat
 Delphi2=N
 Delphi3=N
