Correct erroneous snippet description in structs cat
The snippet description for the `Range` snippet had its description
fixed not to claim that a range of length 1 was empty.

--- a/collection/structs.ini
+++ b/collection/structs.ini
@@ -60,7 +60,7 @@ Delphi12A=Y
 FPC=Y
 
 [Range]
-DescEx="<p>Constructs and returns a <var>TRange</var> record with bounds <var>A</var> and <var>B</var>.</p><p>The smaller of <var>A</var> and <var>B</var> is used as the lower bound and the larger as the upper bound. If both values are equal then the range will be empty.</p>"
+DescEx="<p>Constructs and returns a <var>TRange</var> record with bounds <var>A</var> and <var>B</var>.</p><p>The smaller of <var>A</var> and <var>B</var> is used as the lower bound and the other parameter is used as the upper bound.</p>"
 Depends=TRange
 SeeAlso=TRange
 SeeAlso=TRange,TRangeEx,TIntegerRange
