Add warning to potentially buggy snippet meta data
The `TRangeEx` advanced record had a warning added to its extra
information re buggy behaviour if the range's lower bound was set
greater than the upper bound.

--- a/collection/structs.ini
+++ b/collection/structs.ini
@@ -232,6 +232,7 @@ FPC=Y
 [TRangeEx]
 Kind=class
 DescEx="<p>Encapsulates a range of integers with a methods to test whether a value falls within the range and to adjust the value to fit.</p>"
+Extra="<p><warning>Warning:</warning> It is up to the caller to ensure that the <var>Min</var> field is always less than or equal to the <var>Max</var> field otherwise the <var>Constrain</var> method will return crazy values and <var>Contains</var> will always return False .</p>"
 Units=Math
 SeeAlso=Range,TRange,TIntegerRange
 TestInfo=advanced
