Update arrays.ini with advanced testing info
Added advanced testing information for all snippets in arrays.ini that
didn't already have it: all snippets in this category now have unit
tests in the same DUnit tests project.

Set TestInfo=advanced, AdvancedTest.Level=unit-tests and
AdvancedTest.URL to the Cat-Arrays unit test project on Github.

--- a/collection/arrays.ini
+++ b/collection/arrays.ini
@@ -9,6 +9,9 @@
 DescEx="<p>Copies the elements of string array <var>Strings</var> to string list <var>SL</var>, replacing any existing contents of <var>SL</var>.</p>"
 SeeAlso=StringListToArray
 Units=Classes
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=533.dat
 Delphi2=N
 Delphi3=N
@@ -32,6 +35,9 @@ FPC=Y
 [ByteArraysEqual]
 DescEx="<p>Checks if two byte arrays are equal.</p><p>The arrays are equal if they have the same number of elements and elements at the same position in the array are equal.</p>"
 SeeAlso=ByteArraysSameStart
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=365.dat
 Delphi2=N
 Delphi3=N
@@ -55,6 +61,9 @@ FPC=Y
 [ByteArraysSameStart]
 DescEx="<p>Checks if two byte arrays <var>B1</var> and <var>B2</var> are equal for the first <var>Count</var> elements.</p><p>False is returned if any array has less than <var>Count</var> elements.</p><p><var>Count</var> must be &gt;= 1.</p>"
 SeeAlso=ByteArraysEqual
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=481.dat
 Delphi2=N
 Delphi3=N
@@ -78,6 +87,9 @@ FPC=Y
 [IndexOfByte]
 DescEx="<p>Returns the index of the first occurrence of byte <var>B</var> in byte array <var>A</var>, or -1 if <var>B</var> is not in <var>A</var>.</p>"
 SeeAlso=LastIndexOfByte
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=482.dat
 Delphi2=N
 Delphi3=N
@@ -101,6 +113,9 @@ FPC=Y
 [LastIndexOfByte]
 DescEx="<p>Returns the index of the last occurrence of byte <var>B</var> in byte array <var>A</var>, or -1 if <var>B</var> is not in <var>A</var>.</p>"
 SeeAlso=IndexOfByte
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=483.dat
 Delphi2=N
 Delphi3=N
@@ -125,6 +140,9 @@ FPC=Y
 DescEx="<p>Creates and returns a dynamic string array containing all the strings from the given string list.</p>"
 SeeAlso=ArrayToStringList
 Units=Classes,Types
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=347.dat
 Delphi2=N
 Delphi3=N
@@ -149,6 +167,9 @@ FPC=Y
 DescEx="<p>Appends array of bytes <var>B2</var> to the end of byte array <var>B1</var>.</p>"
 Depends=TBytes
 SeeAlso=ConcatByteArrays
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=364.dat
 Delphi2=N
 Delphi3=N
@@ -173,6 +194,9 @@ FPC=Y
 DescEx="<p>Deletes a sequence of bytes from byte array <var>B</var> starting at index <var>Start</var> with length <var>Len</var>.</p><p>If either <var>Start</var> or <var>Len</var> are less than 0 they are taken as zero. If <var>Start</var> is beyond the end of the array or if <var>Len</var> is 0 then the whole array is returned unchanged. If the sequence of bytes to be chopped extends beyond the end of the array it is truncated from <var>Start</var>.</p>"
 Depends=TBytes,ConcatByteArrays,SliceByteArray
 SeeAlso=SliceByteArray
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=366.dat
 Delphi2=N
 Delphi3=N
@@ -198,6 +222,9 @@ DescEx="<p>Makes a copy of an array of bytes.</p>"
 Extra="<p>Useful for creating a <var>TBytes</var> array from a constant array or for cloning an existing byte array.</p>"
 Depends=TBytes
 SeeAlso=AppendByteArray
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=367.dat
 Delphi2=N
 Delphi3=N
@@ -222,6 +249,9 @@ FPC=Y
 DescEx="<p>Concatenates two byte arrays <var>B1</var> and <var>B2</var> and returns the resulting array.</p><p>The result is the contents of <var>B1</var> followed by the contents of <var>B2</var>.</p>"
 Depends=TBytes,AppendByteArray,CloneByteArray
 SeeAlso=AppendByteArray
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=368.dat
 Delphi2=N
 Delphi3=N
@@ -246,6 +276,9 @@ FPC=Y
 DescEx="<p>Removes the last element of byte array <var>A</var> and returns the element. The length of <var>A</var> shrinks by one.</p><p><var>A</var> must not be empty.</p>"
 Depends=TBytes
 SeeAlso=PushByteArray,ShiftByteArray,UnShiftByteArray
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=484.dat
 Delphi2=N
 Delphi3=N
@@ -270,6 +303,9 @@ FPC=Y
 DescEx="<p>Pushes byte <var>B</var> onto the end of byte array <var>A</var>. The length of <var>A</var> grows by one.</p>"
 Depends=TBytes
 SeeAlso=PopByteArray,ShiftByteArray,UnShiftByteArray
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=485.dat
 Delphi2=N
 Delphi3=N
@@ -294,6 +330,9 @@ FPC=Y
 DescEx="<p>Removes the first element of byte array <var>A</var> and returns the element. The length of <var>A</var> shrinks by one.</p><p><var>A</var> must not be empty.</p>"
 Depends=TBytes
 SeeAlso=PopByteArray,PushByteArray,UnShiftByteArray
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=486.dat
 Delphi2=N
 Delphi3=N
@@ -318,6 +357,9 @@ FPC=Y
 DescEx="<p>Slices a range of bytes from byte array <var>B</var>, starting at index <var>Start</var> with length <var>Len</var>, and returns the result.</p><p>If either <var>Start</var> or <var>Len</var> are less than 0, they are taken as 0. If <var>Start</var> is beyond the end of the array or if <var>Len</var> is 0 then an empty array is returned. If the sequence of bytes to be sliced extends beyond the end of the array it is truncated from <var>Start</var>.</p>"
 Depends=TBytes
 SeeAlso=ChopByteArray
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=369.dat
 Delphi2=N
 Delphi3=N
@@ -342,6 +384,9 @@ FPC=Y
 DescEx="<p>Inserts byte <var>B</var> at the beginning of byte array <var>A</var>. The length of <var>A</var> grows by one.</p>"
 Depends=TBytes
 SeeAlso=PopByteArray,PushByteArray,ShiftByteArray
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-Arrays"
 Snip=487.dat
 Delphi2=N
 Delphi3=N
