Add new RandomString function to string category
A new source code file was added for RandomString

Meta data for RandomString was added to string.ini.

--- a/collection/string.ini
+++ b/collection/string.ini
@@ -1807,3 +1807,14 @@ DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
 FPC=Y
+
+[RandomString]
+DescEx="<p>Returns a random string from the given non-empty string list.</p><p>An <var>EArgumentException</var> exception is raised if the string list is empty.</p>"
+Extra="<p>The Delphi RTL has a similar <var>RandomFrom</var> function in <var>StrUtils</var> that returns a random string from a string array.</p>"
+Units=SysUtils,Classes
+TestInfo=advanced
+AdvancedTest.Level=unit-tests
+AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tests/Cat-String"
+Snip=707.dat
+DelphiXE=Y
+Delphi12A=Y
